update: replace `getFirst()` with `get(0)` in test cases for consistency and downgrade language level to JDK 17